Loaded the Dataset

--- a/LLM.ipynb
+++ b/LLM.ipynb
@@ -97,8 +97,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T10:11:34.098361Z",
-     "start_time": "2024-12-10T10:11:34.082490Z"
+     "end_time": "2024-12-10T10:16:33.916151Z",
+     "start_time": "2024-12-10T10:16:33.827198Z"
     }
    },
    "cell_type": "code",
@@ -106,7 +106,7 @@
     "with open(\"Dataset.txt\", \"r\") as file:\n",
     "    train_text = file.read()\n",
     "\n",
-    "print(train_text[:500])"
+    "print(train_text[:700])"
    ],
    "id": "aa83771b2f7c2d6e",
    "outputs": [
@@ -143,19 +143,15 @@
       "One word, good citizens.\n",
       "\n",
       "First Citizen:\n",
-      "We are accounted poor\n"
+      "We are accounted poor citizens, the patricians good.\n",
+      "What authority surfeits on would relieve us: if they\n",
+      "would yield us but the superfluity, while it were\n",
+      "wholesome, we might guess they relieved us humanely;\n",
+      "but they thi\n"
      ]
     }
    ],
-   "execution_count": 11
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "91a0939eb3f2ee21"
+   "execution_count": 13
   }
  ],
  "metadata": {
