--- a/LLM.ipynb
+++ b/LLM.ipynb
@@ -3,15 +3,36 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-05T19:42:04.162546Z",
-     "start_time": "2024-12-05T19:42:00.123105Z"
+     "end_time": "2024-12-10T11:15:23.847769Z",
+     "start_time": "2024-12-10T11:15:22.226496Z"
     }
    },
    "cell_type": "code",
-   "source": "from torch.utils.data import Dataset",
+   "source": [
+    "from torch.utils.data import Dataset\n",
+    "import os\n",
+    "import sys\n",
+    "import torch\n",
+    "import tiktoken\n",
+    "import sentencepiece\n",
+    "import subprocess"
+   ],
    "id": "f9a7e8aa1b3814ff",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 41
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-10T11:25:10.042708Z",
+     "start_time": "2024-12-10T11:25:08.165884Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "!pip freeze > requirements.txt",
+   "id": "e67ac312e97d42f",
+   "outputs": [],
+   "execution_count": 47
   },
   {
    "metadata": {},
@@ -66,39 +87,108 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T10:08:24.273161Z",
-     "start_time": "2024-12-10T10:08:19.036390Z"
+     "end_time": "2024-12-10T11:28:52.333814Z",
+     "start_time": "2024-12-10T11:28:52.301548Z"
     }
    },
    "cell_type": "code",
-   "source": "!wget https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt",
-   "id": "fe02f43f8fac14da",
+   "source": [
+    "def check_requirements() -> bool:\n",
+    "    try:\n",
+    "        result = subprocess.run(\n",
+    "            [\"pip\", \"install\", \"-r\", \"requirements.txt\"],\n",
+    "            check=True,  # Raise an exception if the command fails\n",
+    "            stdout=subprocess.PIPE,\n",
+    "            stderr=subprocess.PIPE,\n",
+    "            text=True\n",
+    "        )\n",
+    "        print(result.stdout)  # Optional: Print installation output\n",
+    "        return True\n",
+    "    except subprocess.CalledProcessError as e:\n",
+    "        print(f\"Error installing requirements: {e.stderr}\")\n",
+    "        return False\n"
+   ],
+   "id": "359f1802d1cc1390",
+   "outputs": [],
+   "execution_count": 48
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-10T11:28:55.015165Z",
+     "start_time": "2024-12-10T11:28:52.878876Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "check_requirements()",
+   "id": "37422fc4f98dd644",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2024-12-10 11:08:23--  https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\r\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.109.133, 185.199.110.133, ...\r\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\r\n",
-      "HTTP request sent, awaiting response... 200 OK\r\n",
-      "Length: 1115394 (1.1M) [text/plain]\r\n",
-      "Saving to: ‘input.txt’\r\n",
-      "\r\n",
-      "input.txt           100%[===================>]   1.06M  --.-KB/s    in 0.1s    \r\n",
-      "\r\n",
-      "2024-12-10 11:08:24 (8.30 MB/s) - ‘input.txt’ saved [1115394/1115394]\r\n",
-      "\r\n"
+      "Requirement already satisfied: numpy==2.0.2 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from -r requirements.txt (line 1)) (2.0.2)\n",
+      "Requirement already satisfied: sentencepiece==0.2.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from -r requirements.txt (line 2)) (0.2.0)\n",
+      "Requirement already satisfied: tiktoken==0.6.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from -r requirements.txt (line 3)) (0.6.0)\n",
+      "Requirement already satisfied: torch==2.2.2 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from -r requirements.txt (line 4)) (2.2.2)\n",
+      "Requirement already satisfied: torchaudio==2.2.2 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from -r requirements.txt (line 5)) (2.2.2)\n",
+      "Requirement already satisfied: torchvision==0.17.2 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from -r requirements.txt (line 6)) (0.17.2)\n",
+      "Requirement already satisfied: regex>=2022.1.18 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from tiktoken==0.6.0->-r requirements.txt (line 3)) (2024.11.6)\n",
+      "Requirement already satisfied: requests>=2.26.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from tiktoken==0.6.0->-r requirements.txt (line 3)) (2.32.3)\n",
+      "Requirement already satisfied: filelock in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from torch==2.2.2->-r requirements.txt (line 4)) (3.16.1)\n",
+      "Requirement already satisfied: typing-extensions>=4.8.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from torch==2.2.2->-r requirements.txt (line 4)) (4.12.2)\n",
+      "Requirement already satisfied: sympy in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from torch==2.2.2->-r requirements.txt (line 4)) (1.13.3)\n",
+      "Requirement already satisfied: networkx in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from torch==2.2.2->-r requirements.txt (line 4)) (3.3)\n",
+      "Requirement already satisfied: jinja2 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from torch==2.2.2->-r requirements.txt (line 4)) (3.1.4)\n",
+      "Requirement already satisfied: fsspec in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from torch==2.2.2->-r requirements.txt (line 4)) (2024.9.0)\n",
+      "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from torchvision==0.17.2->-r requirements.txt (line 6)) (10.4.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from requests>=2.26.0->tiktoken==0.6.0->-r requirements.txt (line 3)) (3.4.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from requests>=2.26.0->tiktoken==0.6.0->-r requirements.txt (line 3)) (3.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from requests>=2.26.0->tiktoken==0.6.0->-r requirements.txt (line 3)) (2.2.3)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from requests>=2.26.0->tiktoken==0.6.0->-r requirements.txt (line 3)) (2024.8.30)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from jinja2->torch==2.2.2->-r requirements.txt (line 4)) (2.1.5)\n",
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from sympy->torch==2.2.2->-r requirements.txt (line 4)) (1.3.0)\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 49
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 23,
+   "source": [
+    "if not os.path.exists(\"Dataset.txt\"):\n",
+    "    os.system(\"wget https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\")\n",
+    "    os.rename(\"input.txt\", 'Dataset.txt')"
+   ],
+   "id": "fe02f43f8fac14da"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T10:16:33.916151Z",
-     "start_time": "2024-12-10T10:16:33.827198Z"
+     "end_time": "2024-12-10T10:36:47.798486Z",
+     "start_time": "2024-12-10T10:36:47.782976Z"
     }
    },
    "cell_type": "code",
@@ -106,7 +196,7 @@
     "with open(\"Dataset.txt\", \"r\") as file:\n",
     "    train_text = file.read()\n",
     "\n",
-    "print(train_text[:700])"
+    "print(train_text[:500])"
    ],
    "id": "aa83771b2f7c2d6e",
    "outputs": [
@@ -143,15 +233,176 @@
       "One word, good citizens.\n",
       "\n",
       "First Citizen:\n",
-      "We are accounted poor citizens, the patricians good.\n",
-      "What authority surfeits on would relieve us: if they\n",
-      "would yield us but the superfluity, while it were\n",
-      "wholesome, we might guess they relieved us humanely;\n",
-      "but they thi\n"
+      "We are accounted poor\n"
      ]
     }
    ],
-   "execution_count": 13
+   "execution_count": 7
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": 6,
+   "source": [
+    "class CharDataset(Dataset):\n",
+    "    \"\"\"\n",
+    "    Emits batches of characters.\n",
+    "\n",
+    "    Adapted from \"https://github.com/karpathy/minGPT\".\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, data: str, mode: str = \"normal\"):\n",
+    "\n",
+    "        self.chars = set(train_text)  # get characters from the input data\n",
+    "\n",
+    "        if mode == \"normal\":\n",
+    "            self.stoi = {ch: i for i, ch in enumerate(chars)}  # map characters to integer indices\n",
+    "        elif mode == \"sentencepiece\":\n",
+    "            pass\n",
+    "        elif mode == \"tiktoken\":\n",
+    "            pass\n",
+    "\n",
+    "    def get_vocab_size(self):\n",
+    "        return len(self.chars)\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        raise NotImplementedError()\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        # grab a chunk of (block_size + 1) characters from the data\n",
+    "        # encode every character to an integer\n",
+    "        # return the chunk and the shifted version as tensors\n",
+    "        pass\n",
+    "\n",
+    "# ```"
+   ],
+   "id": "7bba9bcbc5272509"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-10T10:36:47.869993Z",
+     "start_time": "2024-12-10T10:36:47.808219Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "sorted(set(train_text))",
+   "id": "cbd6ae509cbe41c7",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['\\n',\n",
+       " ' ',\n",
+       " '!',\n",
+       " '$',\n",
+       " '&',\n",
+       " \"'\",\n",
+       " ',',\n",
+       " '-',\n",
+       " '.',\n",
+       " '3',\n",
+       " ':',\n",
+       " ';',\n",
+       " '?',\n",
+       " 'A',\n",
+       " 'B',\n",
+       " 'C',\n",
+       " 'D',\n",
+       " 'E',\n",
+       " 'F',\n",
+       " 'G',\n",
+       " 'H',\n",
+       " 'I',\n",
+       " 'J',\n",
+       " 'K',\n",
+       " 'L',\n",
+       " 'M',\n",
+       " 'N',\n",
+       " 'O',\n",
+       " 'P',\n",
+       " 'Q',\n",
+       " 'R',\n",
+       " 'S',\n",
+       " 'T',\n",
+       " 'U',\n",
+       " 'V',\n",
+       " 'W',\n",
+       " 'X',\n",
+       " 'Y',\n",
+       " 'Z',\n",
+       " 'a',\n",
+       " 'b',\n",
+       " 'c',\n",
+       " 'd',\n",
+       " 'e',\n",
+       " 'f',\n",
+       " 'g',\n",
+       " 'h',\n",
+       " 'i',\n",
+       " 'j',\n",
+       " 'k',\n",
+       " 'l',\n",
+       " 'm',\n",
+       " 'n',\n",
+       " 'o',\n",
+       " 'p',\n",
+       " 'q',\n",
+       " 'r',\n",
+       " 's',\n",
+       " 't',\n",
+       " 'u',\n",
+       " 'v',\n",
+       " 'w',\n",
+       " 'x',\n",
+       " 'y',\n",
+       " 'z']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-10T10:36:47.986865Z",
+     "start_time": "2024-12-10T10:36:47.874818Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "len(set(train_text))",
+   "id": "e72a32b9e3acb5",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "65"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 9
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-10T10:36:48.043553Z",
+     "start_time": "2024-12-10T10:36:48.036855Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "1acd0f0fb6b22665",
+   "outputs": [],
+   "execution_count": 9
   }
  ],
  "metadata": {
