--- a/LLM.ipynb
+++ b/LLM.ipynb
@@ -567,10 +567,140 @@
   {
    "metadata": {},
    "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([18, 47, 56, 57, 58,  1, 15, 47])\n",
+      "First Ci\n"
+     ]
+    }
+   ],
+   "execution_count": 266,
+   "source": [
+    "context_length = 8\n",
+    "\n",
+    "print(train_data[:context_length])\n",
+    "print(char_dataset1.decode(train_data[:context_length].tolist()))"
+   ],
+   "id": "f9a364fcef57da41"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-11T11:51:22.715512Z",
+     "start_time": "2024-12-11T11:51:22.557258Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "train_data2 = data2[:n]\n",
+    "val_data2 = data2[n:]\n",
+    "\n",
+    "print(train_data2[:context_length])\n",
+    "print(char_dataset2.decode(train_data2[:context_length].tolist()))"
+   ],
+   "id": "82823b888661a6e8",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([ 160,  346,    5, 1001,   54, 1671,  208,  953])\n",
+      "First Citizen: Before we proceed any further\n"
+     ]
+    }
+   ],
+   "execution_count": 307
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "context = 1, input = [18], target = 47\n",
+      "context = 2, input = [18, 47], target = 56\n",
+      "context = 3, input = [18, 47, 56], target = 57\n",
+      "context = 4, input = [18, 47, 56, 57], target = 58\n",
+      "context = 5, input = [18, 47, 56, 57, 58], target = 1\n",
+      "context = 6, input = [18, 47, 56, 57, 58, 1], target = 15\n",
+      "context = 7, input = [18, 47, 56, 57, 58, 1, 15], target = 47\n"
+     ]
+    }
+   ],
+   "execution_count": 268,
+   "source": [
+    "x = train_data[:context_length]\n",
+    "y = train_data[1:context_length + 1]\n",
+    "\n",
+    "for context in range(1, context_length):\n",
+    "    print(f\"context = {context}, input = {x[:context].tolist()}, target = {y[context - 1]}\")"
+   ],
+   "id": "5aa32008cc25e3a1"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-11T11:50:34.670777Z",
+     "start_time": "2024-12-11T11:50:34.616384Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "torch.manual_seed(1337)\n",
+    "batch_size = 4\n",
+    "context_length = 8\n",
+    "\n",
+    "\n",
+    "def get_batch(data):\n",
+    "    start_idx = torch.randint(low=0, high=len(data) - context_length, size=(batch_size,))\n",
+    "\n",
+    "    return torch.stack([data[i: i + context_length] for i in start_idx]), torch.stack(\n",
+    "        [data[i + 1: i + 1 + context_length] for i in start_idx])\n",
+    "\n",
+    "\n",
+    "xb, yb = get_batch(train_data)\n",
+    "print(\"input\")\n",
+    "print(xb.shape)\n",
+    "print(xb)\n",
+    "print(\"target\")\n",
+    "print(yb.shape)\n",
+    "print(yb)"
+   ],
+   "id": "1cfbc1a9310f0e2c",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input\n",
+      "torch.Size([4, 8])\n",
+      "tensor([[24, 43, 58,  5, 57,  1, 46, 43],\n",
+      "        [44, 53, 56,  1, 58, 46, 39, 58],\n",
+      "        [52, 58,  1, 58, 46, 39, 58,  1],\n",
+      "        [25, 17, 27, 10,  0, 21,  1, 54]])\n",
+      "target\n",
+      "torch.Size([4, 8])\n",
+      "tensor([[43, 58,  5, 57,  1, 46, 43, 39],\n",
+      "        [53, 56,  1, 58, 46, 39, 58,  1],\n",
+      "        [58,  1, 58, 46, 39, 58,  1, 46],\n",
+      "        [17, 27, 10,  0, 21,  1, 54, 39]])\n"
+     ]
+    }
+   ],
+   "execution_count": 306
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "cb485da255ca58cb"
+   "id": "f8a41f136360200c"
   }
  ],
  "metadata": {
