corrected CharDataset vocab sizes

--- a/LLM.ipynb
+++ b/LLM.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T16:34:20.881434Z",
-     "start_time": "2024-12-10T16:34:20.825419Z"
+     "end_time": "2024-12-11T14:34:21.497013Z",
+     "start_time": "2024-12-11T14:34:21.398274Z"
     }
    },
    "cell_type": "code",
@@ -22,11 +22,14 @@
     "# nltk.download('stopwords')\n",
     "# nltk.download('punkt')\n",
     "\n",
-    "from nltk.corpus import stopwords"
+    "from nltk.corpus import stopwords\n",
+    "\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F"
    ],
    "id": "f9a7e8aa1b3814ff",
    "outputs": [],
-   "execution_count": 201
+   "execution_count": 308
   },
   {
    "metadata": {
@@ -152,8 +155,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T16:46:51.685509Z",
-     "start_time": "2024-12-10T16:46:51.664838Z"
+     "end_time": "2024-12-11T14:49:56.664851Z",
+     "start_time": "2024-12-11T14:49:56.541581Z"
     }
    },
    "cell_type": "code",
@@ -167,22 +170,25 @@
     "\n",
     "    def __init__(self, data: str, mode: str = \"normal\"):\n",
     "\n",
-    "        self.chars = sorted(set(train_text))  # get characters from the input data\n",
-    "\n",
-    "        self.tokens = set(nltk.word_tokenize(data.lower()))\n",
+    "        self.tokens = set(nltk.word_tokenize(data))\n",
     "        self.mode = mode\n",
     "\n",
     "        if mode == \"normal\":\n",
+    "            self.chars = sorted(set(train_text))  # get characters from the input data\n",
+    "\n",
     "            self.stoi = {ch: i for i, ch in enumerate(self.chars)}  # map characters to integer indices\n",
     "            self.itos = {i: ch for i, ch in enumerate(self.chars)}  # map integer indices to characters\n",
+    "            self.vocab_size = len(self.chars)\n",
     "\n",
     "        elif mode == \"sentencepiece\":\n",
+    "            self.vocab_size = min(len(self.tokens), 10770)\n",
     "            spm.SentencePieceTrainer.train(model_prefix='shakespeare', input='Dataset.txt',\n",
     "                                           vocab_size=10770, unk_id=0, bos_id=1, eos_id=2, pad_id=3)\n",
     "\n",
     "\n",
     "        elif mode == \"tiktoken\":\n",
     "            self.enc = tiktoken.get_encoding(\"gpt2\")\n",
+    "            self.vocab_size = self.enc.max_token_value + 1\n",
     "\n",
     "    def encode(self, text):\n",
     "        if self.mode == \"normal\":\n",
@@ -202,11 +208,8 @@
     "        elif self.mode == \"tiktoken\":\n",
     "            return self.enc.decode(tokens)\n",
     "\n",
-    "    def get_vocab_size(self):\n",
-    "        return len(self.tokens)\n",
-    "\n",
     "    def __len__(self):\n",
-    "        raise NotImplementedError()\n",
+    "        return self.vocab_size\n",
     "\n",
     "    def __getitem__(self, idx):\n",
     "        # grab a chunk of (block_size + 1) characters from the data\n",
@@ -218,13 +221,13 @@
    ],
    "id": "7bba9bcbc5272509",
    "outputs": [],
-   "execution_count": 236
+   "execution_count": 323
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T16:46:52.012581Z",
-     "start_time": "2024-12-10T16:46:52.001533Z"
+     "end_time": "2024-12-11T14:49:56.835683Z",
+     "start_time": "2024-12-11T14:49:56.772927Z"
     }
    },
    "cell_type": "code",
@@ -273,13 +276,13 @@
      ]
     }
    ],
-   "execution_count": 237
+   "execution_count": 324
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T16:47:04.697736Z",
-     "start_time": "2024-12-10T16:46:52.310244Z"
+     "end_time": "2024-12-11T14:50:07.087335Z",
+     "start_time": "2024-12-11T14:49:57.886531Z"
     }
    },
    "cell_type": "code",
@@ -290,41 +293,25 @@
    ],
    "id": "3c69851ade7e8691",
    "outputs": [],
-   "execution_count": 238
+   "execution_count": 325
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T16:47:04.722Z",
-     "start_time": "2024-12-10T16:47:04.712715Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "print(f\"Vocabulary size: {char_dataset1.get_vocab_size()}\")",
-   "id": "104bb5fc6fc94d70",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Vocabulary size: 12443\n"
-     ]
-    }
-   ],
-   "execution_count": 239
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-12-10T16:47:05.564204Z",
-     "start_time": "2024-12-10T16:47:04.726505Z"
+     "end_time": "2024-12-11T14:51:30.541227Z",
+     "start_time": "2024-12-11T14:51:28.442669Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "print(f\"Length of sequence for normal encoding: {len(char_dataset1.encode(train_text))}\")\n",
-    "print(f\"Length of sequence for sentencepiece encoding: {len(char_dataset2.encode(train_text))}\")\n",
-    "print(f\"Length of sequence for tiktoken encoding: {len(char_dataset3.encode(train_text))}\")"
+    "print(\n",
+    "    f\"Normal encoding: Length of sequence = {len(char_dataset1.encode(train_text))}, Vocab size = {char_dataset1.__len__()}\")\n",
+    "\n",
+    "print(\n",
+    "    f\"SentencePiece encoding: Length of sequence = {len(char_dataset2.encode(train_text))}, Vocab size = {char_dataset2.__len__()}\")\n",
+    "\n",
+    "print(\n",
+    "    f\"TikToken encoding: Length of sequence = {len(char_dataset3.encode(train_text))}, Vocab size = {char_dataset3.__len__()}\")"
    ],
    "id": "8dca0b7739b1d395",
    "outputs": [
@@ -332,19 +319,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Length of sequence for normal encoding: 1115394\n",
-      "Length of sequence for sentencepiece encoding: 290364\n",
-      "Length of sequence for tiktoken encoding: 338025\n"
+      "Normal encoding: Length of sequence = 1115394, Vocab size = 65\n",
+      "SentencePiece encoding: Length of sequence = 290364, Vocab size = 10770\n",
+      "TikToken encoding: Length of sequence = 338025, Vocab size = 50257\n"
      ]
     }
    ],
-   "execution_count": 240
+   "execution_count": 327
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T16:47:05.826309Z",
-     "start_time": "2024-12-10T16:47:05.566751Z"
+     "end_time": "2024-12-11T14:51:41.658374Z",
+     "start_time": "2024-12-11T14:51:41.171615Z"
     }
    },
    "cell_type": "code",
@@ -419,13 +406,13 @@
      ]
     }
    ],
-   "execution_count": 241
+   "execution_count": 328
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T11:07:10.091022Z",
-     "start_time": "2024-12-11T11:07:08.798317Z"
+     "end_time": "2024-12-11T14:51:49.361884Z",
+     "start_time": "2024-12-11T14:51:48.731877Z"
     }
    },
    "cell_type": "code",
@@ -544,13 +531,13 @@
      ]
     }
    ],
-   "execution_count": 257
+   "execution_count": 329
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T11:11:08.423751Z",
-     "start_time": "2024-12-11T11:11:08.393309Z"
+     "end_time": "2024-12-11T14:51:55.720925Z",
+     "start_time": "2024-12-11T14:51:55.706234Z"
     }
    },
    "cell_type": "code",
@@ -562,11 +549,23 @@
    ],
    "id": "b42876778837d857",
    "outputs": [],
-   "execution_count": 269
+   "execution_count": 330
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-11T14:51:56.042542Z",
+     "start_time": "2024-12-11T14:51:56.035580Z"
+    }
+   },
    "cell_type": "code",
+   "source": [
+    "context_length = 8\n",
+    "\n",
+    "print(train_data[:context_length])\n",
+    "print(char_dataset1.decode(train_data[:context_length].tolist()))"
+   ],
+   "id": "f9a364fcef57da41",
    "outputs": [
     {
      "name": "stdout",
@@ -577,20 +576,13 @@
      ]
     }
    ],
-   "execution_count": 266,
-   "source": [
-    "context_length = 8\n",
-    "\n",
-    "print(train_data[:context_length])\n",
-    "print(char_dataset1.decode(train_data[:context_length].tolist()))"
-   ],
-   "id": "f9a364fcef57da41"
+   "execution_count": 331
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T11:51:22.715512Z",
-     "start_time": "2024-12-11T11:51:22.557258Z"
+     "end_time": "2024-12-11T14:51:56.433033Z",
+     "start_time": "2024-12-11T14:51:56.387161Z"
     }
    },
    "cell_type": "code",
@@ -612,11 +604,24 @@
      ]
     }
    ],
-   "execution_count": 307
+   "execution_count": 332
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-11T14:51:56.912847Z",
+     "start_time": "2024-12-11T14:51:56.905601Z"
+    }
+   },
    "cell_type": "code",
+   "source": [
+    "x = train_data[:context_length]\n",
+    "y = train_data[1:context_length + 1]\n",
+    "\n",
+    "for context in range(1, context_length):\n",
+    "    print(f\"context = {context}, input = {x[:context].tolist()}, target = {y[context - 1]}\")"
+   ],
+   "id": "5aa32008cc25e3a1",
    "outputs": [
     {
      "name": "stdout",
@@ -632,21 +637,13 @@
      ]
     }
    ],
-   "execution_count": 268,
-   "source": [
-    "x = train_data[:context_length]\n",
-    "y = train_data[1:context_length + 1]\n",
-    "\n",
-    "for context in range(1, context_length):\n",
-    "    print(f\"context = {context}, input = {x[:context].tolist()}, target = {y[context - 1]}\")"
-   ],
-   "id": "5aa32008cc25e3a1"
+   "execution_count": 333
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T11:50:34.670777Z",
-     "start_time": "2024-12-11T11:50:34.616384Z"
+     "end_time": "2024-12-11T14:51:57.762036Z",
+     "start_time": "2024-12-11T14:51:57.674273Z"
     }
    },
    "cell_type": "code",
@@ -692,7 +689,20 @@
      ]
     }
    ],
-   "execution_count": 306
+   "execution_count": 334
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-11T14:51:58.532403Z",
+     "start_time": "2024-12-11T14:51:58.512524Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "f8a41f136360200c",
+   "outputs": [],
+   "execution_count": 335
   },
   {
    "metadata": {},
@@ -700,7 +710,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "f8a41f136360200c"
+   "id": "d60740603688da29"
   }
  ],
  "metadata": {
