Training section adedd

--- a/LLM.ipynb
+++ b/LLM.ipynb
@@ -789,12 +789,194 @@
    "execution_count": 46
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-12T05:11:41.287321Z",
+     "start_time": "2024-12-12T05:11:37.522063Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "optimizer = torch.optim.Adam(m.parameters(), lr=0.001)",
+   "id": "37256f6942f4d361",
+   "outputs": [],
+   "execution_count": 63
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-12T05:27:54.315923Z",
+     "start_time": "2024-12-12T05:27:54.310656Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "batch_size == 32\n",
+    "\n",
+    "\n",
+    "def train(model, data, epochs=10):\n",
+    "    for epoch in range(epochs):\n",
+    "        model.train()\n",
+    "        total_loss = 0\n",
+    "        for _ in range(100):\n",
+    "            xb, yb = get_batch(data)\n",
+    "            logits, loss = model(xb, yb)\n",
+    "            optimizer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            total_loss += loss.item()\n",
+    "        print(f\"Epoch {epoch}, Loss {total_loss / 100}\")\n"
+   ],
+   "id": "321f466874bcd788",
+   "outputs": [],
+   "execution_count": 103
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-12T05:27:55.801729Z",
+     "start_time": "2024-12-12T05:27:55.040597Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "train(m, train_data)",
+   "id": "b0a9ce73e32b3974",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Loss 2.481527715921402\n",
+      "Epoch 1, Loss 2.4788355803489686\n",
+      "Epoch 2, Loss 2.451487354040146\n",
+      "Epoch 3, Loss 2.4628010988235474\n",
+      "Epoch 4, Loss 2.461507182121277\n",
+      "Epoch 5, Loss 2.486212739944458\n",
+      "Epoch 6, Loss 2.4893881380558014\n",
+      "Epoch 7, Loss 2.4833970165252683\n",
+      "Epoch 8, Loss 2.4845554852485656\n",
+      "Epoch 9, Loss 2.430941741466522\n"
+     ]
+    }
+   ],
+   "execution_count": 104
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-12T05:27:57.110033Z",
+     "start_time": "2024-12-12T05:27:57.106996Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "initial_token = torch.tensor(char_dataset1.encode('\\n'), dtype=torch.long).unsqueeze(0)",
+   "id": "8a52bd6d2f8cb33",
+   "outputs": [],
+   "execution_count": 105
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-12T05:27:58.513201Z",
+     "start_time": "2024-12-12T05:27:58.487920Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "print(\n",
+    "    f\"Generated Sequence : {char_dataset1.decode(m.generate(init_token=initial_token, max_new_tokens=100)[0].tolist())}\")"
+   ],
+   "id": "ac4d818700d43790",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated Sequence : \n",
+      "ORY CILLURind cenoy d DUSO:\n",
+      "HUK:\n",
+      "ARI's, I'sh s.\n",
+      "\n",
+      "Yow mutithak r VOMyo,\n",
+      "The ivendonchifitolepeged ale\n"
+     ]
+    }
+   ],
+   "execution_count": 106
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-12T05:31:19.563715Z",
+     "start_time": "2024-12-12T05:28:01.958287Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "train(m2, train_data2)",
+   "id": "ba9ee895c16db240",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Loss 9.804229316711426\n",
+      "Epoch 1, Loss 9.798818016052246\n",
+      "Epoch 2, Loss 9.782116651535034\n",
+      "Epoch 3, Loss 9.812646226882935\n",
+      "Epoch 4, Loss 9.800622415542602\n",
+      "Epoch 5, Loss 9.815299606323242\n",
+      "Epoch 6, Loss 9.811995611190795\n",
+      "Epoch 7, Loss 9.824566326141358\n",
+      "Epoch 8, Loss 9.803545007705688\n",
+      "Epoch 9, Loss 9.802391748428345\n"
+     ]
+    }
+   ],
+   "execution_count": 107
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-12T05:33:24.927925Z",
+     "start_time": "2024-12-12T05:33:24.903544Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "initial_token = torch.tensor(char_dataset2.encode('I love '), dtype=torch.long).unsqueeze(0)",
+   "id": "b878da9aaf23fc3",
+   "outputs": [],
+   "execution_count": 124
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-12T05:33:25.603771Z",
+     "start_time": "2024-12-12T05:33:25.263698Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "print(\n",
+    "    f\"Generated Sequence : {char_dataset2.decode(m2.generate(indices=initial_token, max_new_tokens=100)[0].tolist())}\")"
+   ],
+   "id": "d2ba3372c3d85ad6",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated Sequence : I love irre letters warrant posterity Rich assure valley gripe condemn glean speeches trouble herdsm maidenhead envywarm swallow Juno gust supposes Both Wor lave held noeameaning wenches memory mockSA unluckingham ranillshol bird hood amitygold Sha bruise perpetu Seduc breathedNovalued handledoveramber shoulderorrectionanointed Conceive braverjury penitent like unshape froward sovereignty inkLOU Musician rode slippery faithfulexamine browsove climatelvish fixMILL sake softly pike confiscatPray quarr Hap reign anchor streak Wruccessive above likelihooddnes drops medlar past ALamesuring fashions closeturgeon Give friend\n"
+     ]
+    }
+   ],
+   "execution_count": 125
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "37256f6942f4d361"
+   "id": "ed90cdcd270ad102"
   }
  ],
  "metadata": {
